--- a/app/views/pages/edit_profile.html.erb
+++ b/app/views/pages/edit_profile.html.erb
@@ -40,43 +40,49 @@
         <label class="label-material"> Your city </label>
       </div>
 
-    <div class="margin-bottom">
-      <p> Select Your Tattoo Styles </p>
-      <% @styles.each do |style| %>
-      <p> <span class="style-checkbox">
-        <label for="artist_styles_<%= style.id %>">
-          <input class="cool check_boxes required multiselectuser" autofocus="autofocus" required="required" aria-required="true" selected="selected" type="checkbox" value="<%= style.id %>" name="artist[styles][]" id="artist_styles_<%= style.id %>" data-size="small" data-on-color='success' data-on-text='yes' data-off-text='no' />
-          <%= style.name %>
-
-        </label>
-      </span> </p>
-      <% end %>
-
-
-    </div>
-    <%#= f.input :styles, label: false, collection: @styles, selected: @artist.styles.map(&:id),  input_html: {class: 'multiselectuser' }, required:true, autofocus: true, as: :check_boxes ,:data => { :size=>'small', 'on-color'=>'success', 'on-text'=>'p', 'off-text'=>'N' } %>
-
-
-    <div class="container-fluid text-center">
-
       <div class="form-inputs group" >
-        <textarea class="textarea-material", name="info", name="artist[info]", id="artist_info", required="true", autofocus="true" > <%= current_artist.info %> </textarea>
-        <label class="label-material"> "Your GetInked bio, fetched from Instagram" </label>
+        <input class="input-material" type="number", hint="Your minimum setup costs" name="artist[city]", id="artist_city",  required="true", autofocus="true" >
         <span class="bar"> </span>
+        <label class="label-material"> Your minimum fee </label>
+      </div>
+
+      <div class="margin-bottom">
+        <p> Select Your Tattoo Styles </p>
+        <% @styles.each do |style| %>
+        <p> <span class="style-checkbox">
+          <label for="artist_styles_<%= style.id %>">
+            <input class="cool check_boxes required multiselectuser" autofocus="autofocus" required="required" aria-required="true" selected="selected" type="checkbox" value="<%= style.id %>" name="artist[styles][]" id="artist_styles_<%= style.id %>" data-size="small" data-on-color='success' data-on-text='yes' data-off-text='no' />
+            <%= style.name %>
+
+          </label>
+        </span> </p>
+        <% end %>
+
+
+      </div>
+      <%#= f.input :styles, label: false, collection: @styles, selected: @artist.styles.map(&:id),  input_html: {class: 'multiselectuser' }, required:true, autofocus: true, as: :check_boxes ,:data => { :size=>'small', 'on-color'=>'success', 'on-text'=>'p', 'off-text'=>'N' } %>
+
+
+      <div class="container-fluid text-center">
+
+        <div class="form-inputs group" >
+          <textarea class="textarea-material", name="info", name="artist[info]", id="artist_info", required="true", autofocus="true" > <%= current_artist.info %> </textarea>
+          <label class="label-material"> "Your GetInked bio, fetched from Instagram" </label>
+          <span class="bar"> </span>
+        </div>
+      </div>
+
+      <div class="text-center">
+        <%= f.button :submit, "Update", class: 'upload-pictures btn btn-primary' %>
+
+        <% end %>
       </div>
     </div>
-
-    <div class="text-center">
-    <%= f.button :submit, "Update", class: 'upload-pictures btn btn-primary' %>
-
-    <% end %>
-    </div>
-    </div>
-    </div>
-
-
-    </div>
   </div>
+
+
+</div>
+</div>
 =======
 <div class="wrapper">
   <div class="container-fluid">
@@ -112,7 +118,7 @@
             </p>
             <% end %>
             <div class="container-fluid">
-              <%= f.input :info, label: "Your GetInked bio, fetched from Instagram", required: true, placeholder: "Tell us about you", input_html: {style: 'width: 100%; height: 10vh;', rows: 5, class: 'edit-profile-input'}, as: :text %>
+              <%= f.input :info, required: true, input_html: {style: 'width: 100%; height: 10vh;', rows: 5, class: 'edit-profile-input'}, as: :text %>
               <%= f.button :submit, "Update", class: 'upload-pictures btn btn-primary btn-center' %>
             </div>
           </div>
@@ -125,23 +131,23 @@
 
 
 <% content_for(:after_js) do  %>
-    <%= javascript_tag do %>
-   $(function() {
-    var availableCities = [
-      "Barcelona",
-      "Berlin",
-      "Rome",
-      "London",
-      "Benidorm",
-      "Badalona",
-      "New York",
-    ];
+<%= javascript_tag do %>
+$(function() {
+var availableCities = [
+"Barcelona",
+"Berlin",
+"Rome",
+"London",
+"Benidorm",
+"Badalona",
+"New York",
+];
 
-    $('#artist-edit-search').autocomplete({
-      source: availableCities
-    });
-  } );
-  <% end %>
+$('#artist-edit-search').autocomplete({
+source: availableCities
+});
+} );
+<% end %>
 <% end %>
 
 <%#= f.input :styles, label: false, collection: @styles, selected: @artist.styles.map(&:id),  input_html: {class: 'multiselectuser' }, required:true, autofocus: true, as: :check_boxes ,:data => { :size=>'small', 'on-color'=>'success', 'on-text'=>'p', 'off-text'=>'N' } %>
